new changes in cloned file

--- a/firstfile.html
+++ b/firstfile.html
@@ -4,3 +4,5 @@ i want to share it mwith github
 so need to apply  some commandsgit remote
 
 need to make a copy or clone of this file
+i am doing some changes in cloned file 
+these changes needed to be add on git
