--- a/firstfile.html
+++ b/firstfile.html
@@ -6,3 +6,5 @@ so need to apply  some commandsgit remote
 need to make a copy or clone of this file
 i am doing some changes in cloned file 
 these changes needed to be add on git
+
+new changes in remote reository
